--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,18 +1,29 @@
 .modal {
-    height: 100px;
-    width: 100px;
-    background-color: rgba(0,0,0,0,4);
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0,0,0,0.4);
     position: fixed;
     top: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
+    opacity: 0;
+    transition: 0.5s;
+    pointer-events: none;
 }
 .content {
     padding: 20px;
     border-radius: 12px;
     background-color: white;
-    height: 200px;
-    width: 200px;
+    transform: scale(0.5);
+    transition: 0.2s all;
+}
+.modal.active {  
+    pointer-events: all;
+    opacity: 1;
+}
+.content.active {
+ transform: scale(1);
 }
