--- a/src/components/Header/BeforeHeader/BeforeHeader.module.css
+++ b/src/components/Header/BeforeHeader/BeforeHeader.module.css
@@ -54,6 +54,76 @@
     background-color: var(--text-color-hover);
 }
 
+.form {
+    padding: 30px 20px;
+}
+
+.input {
+    display: block;
+    width: 100%;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 3px;
+}
+.input:focus {
+    outline: none;
+}
+
+label {
+    line-height: 1;
+}
+
+.inputGroup {
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+label {
+    padding-top: 5px;
+}
+.inputGroupCheckbox {
+    display: flex;
+    align-items: center;
+}
+
+.input2 {
+    transform: scale(1.5);
+    margin-right: 15px;
+    margin-left: 5px;
+}
+
+label {
+    margin-bottom: 7px;
+}
+
+p {
+    margin-bottom: 20px;
+}
+.form {
+
+    color: #555555;
+}
+h2 {
+    line-height: 1;
+    margin-bottom: 20px;
+
+}
+.inputGroupBtn {
+    margin-top: 30px;
+
+}
+
+.btn {
+    border: none;
+}
+
+.red {
+    color: red;
+    margin-left: 3px;
+    font-size: 18px;
+}
+
 @media (max-width: 768px) {
     .wrapper {
         flex-direction: column;
