--- a/src/components/Directions/Ophthalmology.module.css
+++ b/src/components/Directions/Ophthalmology.module.css
@@ -1,3 +1,4 @@
+
 h1 {
     margin-top: 40px;
     margin-bottom: 25px;
@@ -19,7 +20,7 @@ h2 {
     margin-bottom: 25px;
 } 
 .image{
-    background-image: url(../../../public/image/7block/7.jpg);
+    background-image: url(../../../public/image/7block/11.jpg);
     background-size: cover;
     background-position: center;
     width:  1000px;
@@ -29,7 +30,7 @@ h2 {
     margin-bottom: 35px;
 }
 .image2{
-    background-image: url(../../../public/image/7block/8.jpg);
+    background-image: url(../../../public/image/7block/12.jpg);
     background-size: cover;
     background-position: center;
     width:  1000px;
@@ -38,6 +39,7 @@ h2 {
     margin:auto;
     margin-bottom: 35px;
 }
+
 .content2 {
     display: flex;
 }
@@ -47,4 +49,23 @@ h2 {
     height: 100px;
     background-size: cover;
     background-position: center;
+}
+.window
+{
+    background-color: rgb(194, 233, 243);
+    padding-left: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 50px;
+    margin-bottom: 35px;
+}
+.image4 {
+    background-image: url(../../../public/image/7block/13.jpg);
+    background-size: cover;
+    background-position: center;
+    width:  1000px;
+    height: 600px;
+    display:block;
+    margin:auto;
+    margin-bottom: 35px;
 }
