--- a/src/components/Header/BeforeHeader/BeforeHeader.module.css
+++ b/src/components/Header/BeforeHeader/BeforeHeader.module.css
@@ -130,3 +130,19 @@ h2 {
         gap: 10px;
     }
 }
+.search{
+    width: 300px;
+    height: 35px;
+    padding-left: 5px;
+    padding-right: 5px;
+border-radius: 5px;
+outline: none;
+border: 1px solid lightgrey;
+
+}
+
+.search:focus {
+    border: 1px solid lightgrey;
+    outline: none;
+
+}
